[package]
name = "at-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = { version = "4.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["alloc"] }
clap = { version = "3.0", features = ["std"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true